# reqspec

./: LICENCE  README.md  pyproject.toml
src/reqspec/: __init__.py  _client.py  _compiler.py  _decorators.py  _exceptions.py  _markers.py
